# knowledge-repo

./: .gitattributes  .gitignore  .travis.yml  1  Dockerfile  Dockerfile.systest  INTHEWILD.md  MANIFEST.in  README.md  app_config.py  application.py  appveyor.yml  docker-compose.yml  example_post.Rmd  example_post.ipynb  knowledge_repo.db  requirements.txt  run_script.sh  run_tests.bat  run_tests.sh  setup.py  update_screenshots.py
knowledge_repo_v2/service/: .env.dev  .gitignore  Dockerfile  README.md  app.py  config.py  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  setup.sh
knowledge_repo_v2/service/app/: app.py  auth_provider.py  config_defaults.py  models.py  permissions.py  proxies.py  roles.py
knowledge_repo_v2/service/app/auth_providers/: __init__.py  oauth2.py
knowledge_repo_v2/service/app/deploy/: __init__.py  uwsgi.py
knowledge_repo_v2/service/app/routes/: __init__.py  debug.py  editor.py  groups.py  health.py  index.py
knowledge_repo_v2/service/app/static/: site.webmanifest
knowledge_repo_v2/service/app/static/js/: comments.js  (+7 more)
knowledge_repo_v2/service/app/templates/: 404.html  add_group_users.html  auth-login-form.html  batch_tags.html  error.html  markdown-presentation.html  markdown-rendered.html  post_editor_base.html  post_editor_ipynb.html  post_editor_proxy.html  tag_pages.html  web_posts.html
knowledge_repo_v2/service/app/utils/: auth.py  knowledge_metadata.py  models.py  search.py  time.py
knowledge_repo_v2/service/migrations/: env.py
knowledge_repo_v2/service/migrations/versions/: 333b583e5612_create_init_tables.py
(+341 files in other folders)
