[tool.poetry]
name = "knowledge-repo"
version = "0.1.0"
description = "knowledge_repo_v2_under_dev"
authors = ["jing.guo@airbnb.com", "henry.wu@airbnb.com"]
readme = "README.md"
packages = [{include = "knowledge_repo"}]

[tool.poetry.dependencies]
python = "^3.9.6"
black = "22.10.0"
flask = "2.2.2"
flask-cors = "3.0.10"
flask-sqlalchemy = "3.0.2"
flask-migrate = "4.0.0"
pylint = "2.15.6"
pycodestyle = "2.9.1"
psycopg2 = "2.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
